--- a/style/style.css
+++ b/style/style.css
@@ -17,11 +17,11 @@
   --clr-dark-cyan: hsl(184, 14%, 56%);
   --clr-light-grayish-cyan: hsl(185, 41%, 84%);
   --clr-light-cyan: hsl(189, 41%, 97%);
+  --bg-btn-hover: hsl(173, 61%, 77%);
   --clr-white: hsl(0, 0%, 100%);
 }
 
 body {
-  font-family: 'Space Mono', monospace;
   background-color: var(--clr-light-grayish-cyan);
   display: flex;
   flex-direction: column;
@@ -35,14 +35,131 @@ header {
 main {
   width: 920px;
   min-height: 481px;
+  padding-left: 48px;
+  padding-top: 45px;
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 32px 43px rgba(79, 166, 175, 0.200735);
   border-radius: 25px;
+
+  /* Elements a retirer  */
+  display: flex;
+  /* Elements a retirer fin */
+}
+
+body,
+input,
+textarea,
+button {
+  font-family: "Space Mono", monospace;
 }
 
 /**** INPUT ****/
 
+.container-input {
+  width: 50%;
+}
+
+.container-input p {
+  font-size: 1rem;
+  color: var(--clr-dark-grayish-cyan);
+  font-weight: bold;
+}
+
+.price input {
+  background-image: url(/images/icon-dollar.svg);
+  background-repeat: no-repeat;
+  background-position: 1.06rem;
+}
+
+.input-custom {
+  width: 23.6rem;
+  height: 3rem;
+  margin-top: 0.375rem;
+  padding-right: 1.06rem;
+  font-size: var(--fs-input);
+  text-align: right;
+  border-radius: 5px;
+  color: var(--clr-very-dark-cyan);
+  background-color: var(--clr-light-cyan);
+  border: none;
+  cursor: pointer;
+}
+
+.input-custom:hover,
+.input-custom:focus {
+  outline: none;
+  border: 2px solid var(--clr-strong-cyan);
+}
+
+.percent-tip {
+  margin: 2.5rem 0 2.5rem 0;
+}
+
+.percent-tip button {
+  margin-top: 1rem;
+  width: 7.3rem;
+  height: 3rem;
+  border: none;
+  border-radius: 5px;
+  font-size: var(--fs-input);
+  font-weight: bold;
+  background-color: var(--clr-very-dark-cyan);
+  color: var(--clr-white);
+  cursor: pointer;
+}
+
+.percent-tip button:hover {
+  background-color: var(--bg-btn-hover);
+  color: var(--clr-very-dark-cyan);
+}
+
+.percent-tip button:focus {
+  background-color: var(--clr-strong-cyan);
+  color: var(--clr-very-dark-cyan);
+}
+
+.percent-tip input {
+  width: 7.3rem;
+  height: 3rem;
+  font-size: var(--fs-input);
+  font-weight: 700;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  color: var(--clr-very-dark-cyan);
+  background-color: var(--clr-light-cyan);
+  cursor: pointer;
+}
+
+.percent-tip input:hover {
+  border: 2px solid var(--clr-strong-cyan);
+}
+
+.input-percent:focus::placeholder {
+  color: transparent;
+}
+
+.percent-tip input:focus {
+  text-align: right;
+  outline: none;
+  border: 2px solid var(--clr-strong-cyan);
+  color: var(--clr-very-dark-cyan);
+  background-color: var(--clr-light-cyan);
+}
+
+.number-people input {
+  background-image: url(/images/icon-person.svg);
+  background-repeat: no-repeat;
+  background-position: 1.06rem;
+}
+
 /**** OUTPUT ****/
+
+/* Elements a retirer  */
+.container-output {
+  width: 50%;
+}
+/* Elements a retirer fin */
 
 .output-user {
   display: flex;
