--- a/style/style.css
+++ b/style/style.css
@@ -46,7 +46,7 @@ body,
 input,
 textarea,
 button {
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
 }
 
 /**** INPUT ****/
@@ -62,7 +62,7 @@ button {
 }
 
 .price input {
-  background-image: url('../images/icon-dollar.svg');
+  background-image: url("../images/icon-dollar.svg");
   background-repeat: no-repeat;
   background-position: 1.06rem;
 }
@@ -145,7 +145,7 @@ button {
 }
 
 .number-people input {
-  background-image: url('../images/icon-person.svg');
+  background-image: url("../images/icon-person.svg");
   background-repeat: no-repeat;
   background-position: 1.06rem;
 }
