--- a/style/style.css
+++ b/style/style.css
@@ -87,11 +87,16 @@ button {
   border: 2px solid var(--clr-strong-cyan);
 }
 
+.input-custom.error {
+  border: 2px solid hsl(13, 70%, 61%);
+  border-radius: 5px;
+}
+
 .percent-tip {
   margin: 2.5rem 0 2.5rem 0;
 }
 
-.percent-tip button {
+.percent-tip > button {
   margin-top: 1rem;
   width: 7.3rem;
   height: 3rem;
@@ -104,12 +109,17 @@ button {
   cursor: pointer;
 }
 
-.percent-tip button:hover {
+.percent-tip > button:hover {
   background-color: var(--bg-btn-hover);
   color: var(--clr-very-dark-cyan);
 }
 
-.percent-tip button:focus {
+/* .percent-tip button:focus {
+  background-color: var(--clr-strong-cyan);
+  color: var(--clr-very-dark-cyan);
+} */
+
+.btn-percent.select {
   background-color: var(--clr-strong-cyan);
   color: var(--clr-very-dark-cyan);
 }
@@ -148,6 +158,17 @@ button {
   background-image: url('../images/icon-person.svg');
   background-repeat: no-repeat;
   background-position: 1.06rem;
+}
+
+.number-people > div {
+  display: flex;
+  justify-content: space-between;
+  width: 23.6rem;
+}
+
+.people-text.active-error {
+  color: hsl(13, 70%, 61%);
+  font-weight: bold;
 }
 
 /**** OUTPUT ****/
@@ -209,11 +230,11 @@ button {
   text-transform: uppercase;
 }
 
-/* .btn-output-active {
+.btn-output.active {
   background-color: var(--clr-strong-cyan);
   cursor: pointer;
 }
 
-.btn-output-active:hover {
+.btn-output.active:hover {
   background-color: var(--bg-btn-hover);
-} */
+}
