--- a/style/style.css
+++ b/style/style.css
@@ -22,10 +22,12 @@
 }
 
 body {
-  background-color: var(--clr-light-grayish-cyan);
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  overflow-y: hidden;
+  background-color: var(--clr-light-grayish-cyan);
 }
 
 header {
@@ -230,6 +232,49 @@ button {
   background-color: var(--bg-btn-hover);
 }
 
+/**** Contributor ****/
+.attribution {
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  bottom: -40rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: pink;
+  border: 0px solid;
+  border-radius: 50%;
+  transition: 3s;
+}
+
+.attribution.effect {
+  bottom: -19rem;
+  transition: 3s;
+}
+
+.attribution a {
+  text-decoration: none;
+  color: var(--clr-very-dark-cyan);
+  font-weight: bold;
+}
+
+.attribution a:hover {
+  opacity: 0.7;
+}
+
+.attribution > div > div {
+  margin-top: 1rem;
+}
+
+.contributor {
+  display: flex;
+}
+
+.contributor > p {
+  margin: 0 0.5rem 0 0.5rem;
+}
+
 @media all and (min-width: 1440px) {
   main {
     width: 60%;
@@ -257,51 +302,4 @@ button {
   .container-output {
     width: 60%;
   }
-}
-
-/***TEST ***/
-
-body {
-  position: relative;
-  overflow-y: hidden;
-}
-
-/* main {
-  margin-bottom: 16rem;
-} */
-
-.attribution {
-  position: absolute;
-  height: 300px;
-  width: 300px;
-  bottom: -40rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  background-color: pink;
-  border: 0px solid;
-  border-radius: 50%;
-  transition: 3s;
-}
-
-.attribution a {
-  text-decoration: none;
-  color: var(--clr-very-dark-cyan);
-}
-
-.attribution > div > div {
-  margin-top: 1rem;
-}
-
-.attribution.effect {
-  bottom: -19rem;
-  transition: 3s;
-}
-
-.contributor {
-  display: flex;
-}
-.contributor > p {
-  margin: 0 0.5rem 0 0.5rem;
 }
