--- a/style/style.css
+++ b/style/style.css
@@ -21,23 +21,29 @@
   --clr-white: hsl(0, 0%, 100%);
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
+  overflow-x: hidden;
   overflow-y: hidden;
   background-color: var(--clr-light-grayish-cyan);
 }
 
 header {
-  margin: 8rem 0 5rem 0;
+  margin: 6rem 0 5rem 0;
 }
 
 main {
   display: flex;
   width: 65%;
   min-height: 481px;
+  margin-bottom: 10rem;
   padding: 2rem 2rem 2rem 3rem;
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 32px 43px rgba(79, 166, 175, 0.200735);
@@ -237,7 +243,7 @@ button {
   position: absolute;
   height: 300px;
   width: 300px;
-  bottom: -40rem;
+  bottom: -20rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -249,7 +255,7 @@ button {
 }
 
 .attribution.effect {
-  bottom: -19.5rem;
+  bottom: -9.5rem;
   transition: 3s;
 }
 
